--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pen to Project to People</title>
+
+    <link rel="stylesheet" href="style.css">
+    
+    <script src="script.js" defer></script>
+
 </head>
 <body>
     <img class="thumbnail"
